syntax = "proto3";
option java_package = "org.crunchycookie.orion.worker";

service Worker {
  // Upload task files to the worker. This file can either be the executable,
  // or any of the input files.
  rpc upload(stream FileUploadRequest) returns(FileUploadResponse) {};

  // Instruct worker to execute the job and provide output files of the job.
  rpc execute(Task) returns (stream Result) {}
}

message Task {
  FileMetaData executable = 1;
  repeated string argument = 2;
}

/*
Results are sent in a stream in the order of,
taskStatus -> output file metadata -> output file ...
 */
message Result {
  oneof request {
    Status taskStatus = 1;
    FileMetaData outputFileMetaData = 2;
    File outputFile = 3;
  }
}

message FileUploadRequest {
  oneof request {
    FileMetaData metadata = 1;
    File file = 2;
  }
}

message FileMetaData {
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message FileUploadResponse {
  FileMetaData metadata = 1;
  Status status = 2;
}
